# astra-ksp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: default.yaml  local-ksp.yaml  rssro-ksp.yaml
csharp/: build.sh
docs/: AUDIT_2026-06-22.md  CONSTELLATION_DESIGN.md  GENERALIZED_AEROSPACE_METHODOLOGY.md  MUN_FLIGHT_LIVE_TODO.md  USING_KRPC_AND_MECHJEB.md  artemis_mun_engineering_notebook.md  artemis_precision_design_notes.md
scripts/: build_bridge.ps1  finalize_bridge_install.ps1  install_bridge.ps1  run_offline_smoke.ps1
skills/: 00-orchestration.md  README.md  ascent-to-orbit.md  craft-design.md  hoverslam-landing.md  mission-planning.md  rendezvous-and-docking.md  return-and-reentry.md  soi-capture.md  trans-munar-injection.md
tests/: test_artemis.py  test_astra.py  test_astra_integration.py  test_astra_planner.py  test_astro.py  test_autostart.py  test_codex_review.py  test_commander.py  test_craft_writer.py  test_crewed_eve_roundtrip.py  test_design.py  test_design_chart.py  test_duna.py  test_eva_control.py  test_eve_flag_mission.py  test_flight_controller.py  test_guidance.py  test_launch_failfast.py  test_metacognition.py  test_mission.py  test_mission_aware_design.py  test_mission_graph.py  test_mod_craft_assets.py  test_optimizer.py  test_parts_catalog.py  test_replay.py  test_rule_base.py  test_runner_load_launch.py  test_staging_separation.py  test_storage.py  test_transfer_planner.py  test_transfer_scoring.py  test_validate_parts_live.py
tools/: _ascent_telemetry.py  _rescue_eve_relay.py  _save_cleanup.py  astra.py  (+43 more)
(+68 files in other folders)
